# storecoin

./: COPYING  INSTALL  Makefile.am  README.md  configure.ac
contrib/: README.md  qt_translations.py  storecoin-qt.pro  storecoind.bash-completion  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  rules  storecoin-qt.desktop  storecoin-qt.install  storecoin-qt.lintian-overrides  storecoin-qt.protocol  storecoind.bash-completion  storecoind.examples  storecoind.install  storecoind.lintian-overrides  storecoind.manpages  watch
contrib/debian/examples/: storecoin.conf
contrib/debian/manpages/: storecoin-qt.1  storecoin.conf.5  storecoind.1
contrib/devtools/: README.md
contrib/gitian-descriptors/: README.md  deps-win32.yml  gitian-win32.yml  gitian.yml  qt-win32.yml
contrib/gitian-downloader/: bluematt-key.pgp  linux-download-config  win32-download-config
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: README.md  background.psd  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  example-config.cfg  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  makeseeds.py
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: verify.sh
doc/: Doxyfile  README.md  README_windows.txt  assets-attribution.md  build-msw.md  build-osx.md  build-unix.md  coding.md  multiwallet-qt.md  release-process.md  tor.md  translation_process.md  unit-tests.md
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-storecoind-for-test.sh.in
qa/rpc-tests/: util.sh  wallet.sh
share/: setup.nsi.in  ui.rc
share/certs/: BitcoinFoundation_Apple_Cert.pem  BitcoinFoundation_Comodo_Cert.pem  PrivateKeyNotes.md
share/pixmaps/: storecoin128.xpm  storecoin16.xpm  storecoin256.xpm  storecoin32.xpm  storecoin64.xpm
share/qt/: Info.plist.in  clean_mac_info_plist.py  extract_strings_qt.py  make_windows_icon.sh
src/: .gitignore  Makefile.am  Makefile.include  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  base58.h  bignum.h  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  core.cpp  core.h  crypter.cpp  crypter.h  db.cpp  db.h  hash.h  init.cpp  init.h  key.cpp  key.h  keystore.cpp  keystore.h  leveldbwrapper.cpp  leveldbwrapper.h  limitedmap.h  main.cpp  main.h  (+48 more)
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/m4/: storecoin_find_bdb48.m4  storecoin_qt.m4  storecoin_subdir_to_include.m4
src/qt/: Makefile.am  aboutdialog.cpp  aboutdialog.h  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  monitoreddatamapper.cpp  monitoreddatamapper.h  notificator.cpp  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  (+58 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: storecoin_ach.ts  storecoin_af_ZA.ts  storecoin_ar.ts  storecoin_be_BY.ts  storecoin_bg.ts  storecoin_bs.ts  storecoin_ca.ts  storecoin_ca_ES.ts  storecoin_cs.ts  storecoin_cy.ts  storecoin_da.ts  storecoin_de.ts  storecoin_de_AT.ts  storecoin_el_GR.ts  storecoin_en.ts  storecoin_eo.ts  storecoin_es.ts  storecoin_es_CL.ts  storecoin_es_MX.ts  storecoin_et.ts  storecoin_eu_ES.ts  storecoin_fa.ts  storecoin_fa_IR.ts  storecoin_fi.ts  storecoin_fr.ts  storecoin_fr_CA.ts  storecoin_gl.ts  storecoin_gu_IN.ts  storecoin_he.ts  storecoin_hi_IN.ts  storecoin_hr.ts  storecoin_hu.ts  storecoin_id_ID.ts  storecoin_it.ts  storecoin_ja.ts  storecoin_kk_KZ.ts  storecoin_ko_KR.ts  storecoin_la.ts  storecoin_lt.ts  storecoin_lv_LV.ts  (+21 more)
src/qt/res/: storecoin-qt-res.rc
src/qt/res/icons/: storecoin.icns
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: DoS_tests.cpp  Makefile.am  README  base58_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  netbase_tests.cpp  rpc_wallet_tests.cpp  test_storecoin.cpp  util_tests.cpp  wallet_tests.cpp
src/test/data/: tx_valid.json
